# Smart-Logger

./: CMakeLists.txt  README.md  ToDo  config.ini  db_log.txt  main.c  requirements.txt  run_all.py
analyze_engine/: config.yaml  main.py
analyze_engine/dashboard/: db.sqlite3
analyze_engine/dashboard/dash/: views.py
analyze_engine/dashboard/dash/templates/dash/: index.html
analyze_engine/dashboard/dashboard/: settings.py  urls.py
